apps/web/environments/hz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    projectcontour.io/response-timeout: "60s"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - web.hz.metacpan.org
      secretName: web-tls
  rules:
    - host: web.hz.metacpan.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 80
